Version 2.5.15dev:

* New model A4000/PPC (auto-enables CyberStorm PPC).
* New model A4000/OS4 (CyberStorm PPC, Picasso IV, default to onboard SCSI).
* New options graphics_card and graphics_card_memory (supercedes uaegfx_card).
* New options accelerator_rom, graphics_rom.
* New --workbench option useful for command line testing (automatically
  inserts an appropriate wb disk in DF0).
* Show GUI warning when floppy_drive_x files are not found.
* Enabled A500/512K model (same as A500 but without slow RAM).
* Enabled A4000 model (68030, 3.1 ROM, 2MB Chip + 8 MB Fast).
* Added .bin extension to internal FS-UAE rom scanner.
* More code cleanup / fixes, reduces compiler warnings.
* Enabled floating point control.
* Updated emulation core from WinUAE 2900b16.
* Fixed bug when adding 2nd fast memory bank in non-autoconfig mode.
* Allow 1 to be used as true/yes for boolean uae_* options.
* Removed cpu_idle override, added new cpu_idle option (0 - 10).
* Implemented support for growable VHD hard drive images.
* Added proper error message when libcapsimage plugin is missing.
* Use new dlopen plugin interface to load ppc and libcapsimage plugins.

Version 2.5.14dev:

* Updated emulation core from WinUAE 2900b15.
* Updates to Qemu PPC CPU integration.
* New option: cdrom_drive_0_controller (to specify for example ide1)
* Fixed problem when inserting, ejecting and then inserting a CD again.
* Changes to how fastest-possible-mode works and interacts with
  frame rendering (solves some issues, might introduce new ones...)
* Fixed and activated more recent Picasso96 (uaegfx) code.
* Enabled emulation of GFX hardware boards (Picassso IV, etc).
* A bit more code cleanup and fixes to make code compatible with MSVC.

Version 2.5.13dev:

* Updated emulation core from WinUAE 2900b14.
* Harmonize CD IOCTL / image initialization with WinUAE.
* Initial version of QEmu PPC CPU integration (not fully working yet).
* Removed --disable-cpuboard option to configure (no longer needed).