@@ -1,4 +1,7 @@
-* AmigaOS 4.1 w/Picasso IV => weird frame rate (~36 FPS) right now.
+* The PearPC fallback may not work properly. Please make sure you are using
+  the qemu-uae plugin (check in fs-uae.log.txt that it is loaded properly)
+  if you're having problems.
+* AmigaOS 4.1 w/Picasso IV => sometimes weird frame rate (~36 FPS).
 * Booting CD32 with CD inserted works, but inserting later, or eject +
   re-insert does not seem to work right now.
 * Booting A1000 to kickstart screen does not work. Broke in FS-UAE 2.5.9dev /
